fix icon alignment in subobject links
WEBUMENIA-370

--- a/user/themes/longread/scss/custom.scss
+++ b/user/themes/longread/scss/custom.scss
@@ -845,7 +845,10 @@ $button-height: 60px;
 
 .subobject-overview {
   margin-bottom: 20px;
-  .subobject {
+  .subobject-wrapper {
+    a {
+      text-decoration: none;
+    }
     figure{
       padding: 0;
       figcaption {
@@ -855,20 +858,21 @@ $button-height: 60px;
         padding: 20px;
       }
     }
-    .subobject-caption {
+    img.icon {
+      float: left;
+      width: 15%;
+    }
+    span.subobject-caption {
+      float: right;
+      width: 83%;
       text-decoration: none;
       font-size: 20px;
       font-weight: 900;
-      margin-left: 10px;
-      img.icon {
-        height: 25px;
-        margin-right: 10px;
-      }
     }
     @include respond-to(600) {
       border: 1px solid black;
-      margin-left: 25px;
       width: 93%;
+      margin-left: 25px;
       padding-left: 0;
       margin-top: 10px;
       margin-bottom: 10px;
@@ -878,6 +882,20 @@ $button-height: 60px;
           padding: 0 0;
           width: 25%;
         }
+      }
+      .subobject-content {
+        display: inline-block;
+        vertical-align: middle;
+      }
+      img.icon {
+        float: none;
+        width: 6%;
+        min-width: 20px;
+        margin: 1%;
+      }
+      span.subobject-caption {
+        float: none;
+        width: 60%;
       }
     }
   }
